# WindowsDirectorySpider

./: README.md  dirspider.ps1
DirectorySpider/: .gitignore  Cargo.toml  Readme.md  metadata.json
DirectorySpider/src/: helper.rs  main.rs  metadata.rs
PowerShell/: .gitignore  Readme.md  dirspider.ps1
PowerShell/OneLiner/: Readme.md  dirspider_one_liner_template.ps1  one_liner.cmd  ps1_to_cmd.ps1
fileindexernet4/: fileindexernet4.sln
fileindexernet4/fileindexernet4/: Pathing.cs  Program.cs  fileindexernet4.csproj  packages.config
fileindexernet4/fileindexernet4/Properties/: AssemblyInfo.cs
