[package]
name = "DirectorySpider"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
struson = { version = "0.5.0", features = ["serde"] }
walkdir = "2.5.0"

[build-dependencies]
static_vcruntime = "2.0"